# vk-intro

./: .gitignore  CMakeLists.txt  README.md
assets/: bunny.mtl
assets/bear/: bear_box-2.mtl
assets/cbox/: a.ipynb  cbox-empty.mtl  cbox-sphere.mtl  cbox.mtl
assets/fake_whitted/: fake_whitted.mtl  fake_whitted.obj.mtl  fake_whitted2.obj.mtl  fake_whitted3.obj.mtl
shaders/: 01-tri-fixed.vert  03-mesh.vert  04-mesh.frag  04-mesh.vert  05-mesh.frag  05-mesh.vert  06-input-attachment.frag  06-quad.vert  07-chromatic-aberration.frag
shaders/rt/: ray_chit.rchit  ray_gen.rgen  ray_miss.rmiss  shadow_ray_chit.rchit  shadow_ray_miss.rmiss
src/: CMakeLists.txt
src/00-window/: CMakeLists.txt  main.cpp
src/01-hello-triangle/: CMakeLists.txt  fixedTriangle.cpp  fixedTriangle.h  main.cpp
src/02-depth-buffer/: CMakeLists.txt  fixedTriangleDepth.cpp  fixedTriangleDepth.h  main.cpp
src/03-vertex-buffer/: CMakeLists.txt  main.cpp  triVertexApp.cpp  triVertexApp.h
src/04-descriptor-buffers/: CMakeLists.txt  main.cpp  meshBufferApp.cpp  meshBufferApp.h
src/05-textures/: CMakeLists.txt  main.cpp  meshTexApp.cpp  meshTexApp.h
src/06-input-attachment/: CMakeLists.txt  IAApp.cpp  IAApp.h  main.cpp
src/07-chromatic-aberration/: CAApp.cpp  CAApp.h  CMakeLists.txt  main.cpp
src/08-ray-tracing/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  app.cpp  app.h  camera.cpp  camera.h  config.h  config.in.h  data.h  descriptor.cpp  descriptor.h  initializers.cpp  initializers.h  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  render.cpp  render.h  shader.cpp  shader.h  types.h  utils.cpp  utils.h
src/common/rasterization/: CMakeLists.txt  rasApp.cpp  rasApp.h  rasBufferApp.cpp  rasBufferApp.h  rasDepthApp.cpp  rasDepthApp.h  rasTexApp.cpp  rasTexApp.h  rasVertexApp.cpp  rasVertexApp.h
src/common/rasterization/subpass/: CMakeLists.txt  rasSubpassApp.cpp  rasSubpassApp.h
src/common/rasterization/twoPass/: CMakeLists.txt  rasTwoPassApp.cpp  rasTwoPassApp.h
src/common/rt/: CMakeLists.txt  camera.cpp  camera.h  ppg.cpp  ppg.h  rt.cpp  rt.h  rtHelper.cpp  rtHelper.h  sbtHelper.cpp  sbtHelper.h  shared_with_shaders.h
