add_subdirectory("common")

#add_subdirectory("00-window")
#add_subdirectory("01-hello-triangle")
#add_subdirectory("02-depth-buffer")
#add_subdirectory("03-vertex-buffer")
#add_subdirectory("04-descriptor-buffers")
#add_subdirectory("05-textures")
#add_subdirectory("06-input-attachment")
#add_subdirectory("07-chromatic-aberration")
add_subdirectory("08-ray-tracing")